Quick fix full-bleed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,7 +68,6 @@
   }
 
   .full-bleed {
-    width: 100vw;
-    margin-left: calc(50% - 50vw);
+    width: 75vw;
   }
 }
